2013-10-03  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/discard.c: Fixed compiler warning.
	* macros/gnome-autogen.sh: Synchronised from gnome-common 3.10.0-1,
	which adds support for automake 1.14.
	* autogen.sh: Added --fhs command line option to set the FHS paths.
	* client/help/C/Makefile.am: Updated the targets to build and clean the
	help files (simplehtml and yelphtml).

2013-09-24  Micah Bunting <amnykon@gmail.com>
	* client/common/client.c, server/pregame.c: Simplified the "devcard"
	protocol.

2013-09-23  Roland Clobus <rclobus@rclobus.nl>
	* server/turn.c: Fixed 'admin fix-dice' command.
	* server/pregame.c: Fixed protocol incompatibility during reconnect.

2013-09-08  Micah Bunting <amnykon@gmail.com>
	* server/turn.c, server/server.h, server/pregame.c, server/develop.c,
	common/cards.c, common/cards.h, client/common/develop.c,
	client/common/client.c, client/common/client.h: Removed the variable
	played_develop and the corresponding protocol.
	* client/common/develop.c, client/ai/greedy.c, server/pregame.c,
	server/develop.c, common/cards.c, common/cards.h: Removed struct
	DevelCard and replaced with enum DevelType.
	
2013-09-08  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c, server/player.c, client/common/client.c,
	editor/gtk/editor.c: Added hints for translators.
	* server/gtk/pioneers-server.desktop.in,
	client/gtk/pioneers.desktop.in,
	editor/gtk/pioneers-editor.desktop.in: Removed trademarked word.
	* pioneers.spec.in: Make more similar to Redhat version.
	* editor/gtk/editor.c: Fixed spelling a/an in tooltips.
	* common/network.c: Fixed spelling error.

2013-09-03  Roland Clobus <rclobus@rclobus.nl>
	* docs/pioneers-metaserver.6, metaserver/main.c: Use Ctrl-C instead of
	SIGUSR1 to stop the metaserver.
	* configure.ac: Substitute all variables in pioneers.spec.in. Fixes
	the building of rpm on openSUSE.

2013-09-02  Micah Bunting <amnykon@gmail.com>
        * server/develop.c, server/server.h, server/turn.c, server/pregame.c,